# vse

./: CONTRIBUTING.md  ChronoCore_Context_Layer_v1.0.md  ChronoCore_Convergence_Layer_v1.0.md  LICENSE  NIR_Engineering_Specification_v1.md  PHASE_1_beginner's_guide.md  PHASE_2_chronocore_director.md  PHASE_3_pivotgram_v1-0.md  QUICKSTART.md  README.md  VSE1.5_Canon.docx  VSE_Camera_Movement_Manifest.md  VSE_Composition_Layer_v1.0.md  VSE_Conception_Layer_v1.0.md  VSE_Consent_and_Provenance_Framework.md  VSE_Continuity_Layer_v1.0.md  VSE_Lighting_Manifest_v1.0.md  VSE_Material_Schema_v2.0_Specification.md  VSE_Quick_Start_Guide_v2.0.md  VSE_Stone_Ceramic_Library_v1.0.md  VSE_Unified_Creation_Engine_v2.0.md  VSE_eye_behavior.md  VSE_identity_features.md  VSE_non-invertible_realism-NIR.md  demo.py  pyproject.toml  setup.py
compilers/: CHANGELOG.md  README.md  clockbird_v1.0.vse  clockbird_v1.2.vse  esper_to_english.py  esper_to_spanish.py  esperpiler_v3.py  sentinel.py
compilers/examples/: hello_paralax.py
docs/: hello-world-vse.md
docs/papers/: Volume_0_conceptual_summary.tex  vse-v1.4-conference-paper..tex
examples/: swarm_demo.py  v1.3_deterministic.py  v1.4_kinetic.py
iie/: INTEGRATION_GUIDE.md  VSE_FACIAL_ATLAS_v1.0.md  VSE_FACIAL_ATLAS_v1.0_PRODUCTION.md  anthropometric_catalog_v0.1.md  identity_form_law_quickref.md  identity_form_resolution.md
swarm/: agents.py  axiom_sync.py  config.py  consensus.py  cost_collect.py  dashboard.py  drift_monitor.py  history_graph.py  launcher.py  op_dispatch.py  router.py  state_merge.py
tests/: test_core.py  test_vse_axiomatic.py
vse_core/: __init__.py  merkle_semantic.py  migration.py  packet.py  validator.py
vse_metrics/: __init__.py  cost_engine.py  cost_monitor.py
