[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vse"
version = "1.4.0"
description = "Vector-Space Esperanto: Universal semantic control protocol for AI systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "John J. Weber II", email = "john@example.com"},
]
keywords = [
    "ai", "semantic-control", "nlp", "vector-space",
    "language-model", "prompt-engineering", "semantic-programming"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
viz = [
    "matplotlib>=3.5",
    "plotly>=5.0",
    "networkx>=2.8",
]
notebooks = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
]

[project.urls]
Homepage = "https://github.com/stonespell72/vse"
Documentation = "https://docs.vse.ai"
Repository = "https://github.com/stonespell72/vse"
"Bug Tracker" = "https://github.com/stonespell72/vse/issues"

[project.scripts]
vse-validate = "vse_core.cli:validate_cli"
vse-migrate = "vse_core.cli:migrate_cli"

[tool.setuptools]
packages = ["vse_core", "vse_metrics", "vse_kinetic", "vse_gregarious"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=vse_core --cov=vse_metrics --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
